--- a/css/styles.scss
+++ b/css/styles.scss
@@ -60,7 +60,7 @@ body{
         }
         &__button{
             align-items: center;
-            background-color: $transparentWhiteParagraph;
+            background-color: $veryLightGray;
             border-radius: 8rem;
             display: flex;
             height: 4.8rem;
