--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ body {
 }
 .cards .card__button {
   align-items: center;
-  background-color: hsla(0deg, 0%, 100%, 0.75);
+  background-color: hsl(0deg, 0%, 95%);
   border-radius: 8rem;
   display: flex;
   height: 4.8rem;
